--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+    <!-- Top Banner Section -- Slider -->
     <section>
         <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
             <div class="carousel-indicators">
@@ -72,6 +73,38 @@
             </button>
         </div>
     </section>
+    <!-- Slider-End -->
+
+    <div class="container mt-5 mb-5">
+        <div class="row">
+            <div class="second-part col-6">
+                <img src="images/wedding.png" alt="">
+            </div>
+            <div class="col-6 d-flex flex-column justify-content-center align-items-left">
+                <h2 class="fw-bold">Every Moment is precious</h2>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repudiandae facilis animi eveniet sunt rem
+                    inventore non amet, laboriosam voluptates quasi asperiores consequuntur debitis porro totam quod
+                    laborum eligendi eum dignissimos!</p>
+                <div>
+                    <a class="btn btn-primary fw-bold" href="#" role="button">Explore our album</a>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
         crossorigin="anonymous"></script>
