--- a/index.html
+++ b/index.html
@@ -236,6 +236,20 @@
         </div>
     </div>
 
+    <!-- Footer -->
+
+    <footer>
+        <div class="d-flex flex-column flex-sm-row justify-content-around py-4 my-4 border-top bg-black text-white">
+            <p>&copy; 2022 Company, Inc. All rights reserved.</p>
+            <ul class="list-unstyled d-flex flex-column justify-content-center align-items-right">
+                <li class="ms-3">Get the app</li>
+                <li class="ms-3">Get the app</li>
+                <li class="ms-3">Get the app</li>
+            </ul>
+        </div>
+
+    </footer>
+
 
 
 
